--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "md5": "^2.2.1",
-    "node-sass": "^4.7.1"
+    "node-sass": "^4.7.1",
+    "npm": "^6.0.1"
   }
 }
